Incluídos os exercícios contador e tabuada

--- a/exercícios/PROGRAMA MODELO/modelo.html
+++ b/exercícios/PROGRAMA MODELO/modelo.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verificador de Idade</title>
+    <title>Título da Aba</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
    <header>
-        <h1>Verificador de Idade</h1>
+        <h1>Título da Página</h1>
    </header>
    <section>
         <div>
-            <h2>Ano de Nascimento</h2>
+            <h2>Insira os dados</h2>
         </div>
         <div>
-
+          Testando...
         </div>
    </section>
    <footer>
